feat: load individual products directly from the sellers
