# weapon-seller/src/handlers.ts
@@ -1,5 +1,6 @@
 import { Context } from "hono";
 import * as db from "./db/db.ts";
+import { trace } from "@opentelemetry/api";
 
 export async function listProducts(c: Context) {
   return c.json({
@@ -8,7 +9,12 @@ export async function listProducts(c: Context) {
 }
 
 export async function getProduct(c: Context) {
+  const span = trace.getActiveSpan();
+  span.setAttribute("productName", c.req.param("productName"));
   const productId = c.req.param("productId");
   const product = await db.getProduct(productId);
-  return c.json(product);
+  if (!product?.length) {
+    return c.json({ message: "Product not found" }, 404);
+  }
+  return c.json(product[0]);
 }
